<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- region Android Auto Drawer -->

    <string name="drawer_decade">%1$ds</string> <!-- 1950s -->
    <string name="drawer_sermon">%1$d sermon</string> <!-- 1 sermon -->
    <string name="drawer_sermons">%1$d sermons</string> <!-- 2 sermons -->

    <!-- endregion -->

    <!-- region Notification -->

    <string name="notification_next">Next</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_play">Play</string>
    <string name="notification_previous">Previous</string>

    <!-- endregion -->

    <!-- region Player Custom Actions -->

    <string name="player_restart">Restart</string>

    <!-- endregion -->

    <!-- region Sermon List -->

    <string name="permission_request_denied_permanently_button">Open Settings</string>
    <string name="permission_request_denied_permanently_description">Branham Player was denied access to read your files. Please open up the app settings and grant the Storage permission.</string>
    <string name="permission_request_denied_permanently_title">File Access Denied</string>

    <string name="permission_request_button">Grant Access</string>
    <string name="permission_request_description">Branham Player needs permission to access your files before it can play a sermon</string>
    <string name="permission_request_title">File Access Permission</string>

    <string name="permission_denied_message">This permission is necessary for the Branham Player to work properly</string>

    <!-- endregion -->
</resources>
